# cotti-build-support

./: Cargo.toml  LICENSE  README.md
.github/workflows/: license_checker.yml  markdown_linter.yml  rust.yml
src/: common.rs  install.rs  lib.rs  main.rs
tests/test_files/: files.tar  files.tar.bz2  files.tar.lzma  files.tar.zst
