[package]
name = "cotti-build-support"
description = "Filesystem and OS management for installing and building dependencies."
keywords = ["Filesystem", "untar", "install"]

license = "MIT"
license_file = "LICENSE"
authors = ["Nicolas Gabriel Cotti"]

version = "0.1.0"
edition = "2024"

readme = "README.md"
repository = "https://github.com/ncotti/cotti-build-support"

[dependencies]
tar = "0.4.46"
flate2 = "1.1.9"
glob = "0.3.3"
tempfile = "3.27.0"
bzip2 = "0.6.1"
xz2 = "0.1.7"
zip = "8.6.0"
zstd = "0.13.3"
